--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "react-swipe-card": "^0.1.4",
+    "react-tinder-card": "^1.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.0",
