--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-swipe-card": "^0.1.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.15",
     "styled-components": "^5.0.0",
     "yup": "^0.28.1"
   },
